package IM.Buddy;
import "IM.BaseDefine.proto";
option java_package = "com.mogujie.tt.protobuf";
//option java_outer_classname = "MOGUJIEIMMessage";
option optimize_for = LITE_RUNTIME;

//service id   0x0002

message IMRecentContactSessionReq{
    //cmd id:        0x0201
    required uint32 user_id = 1;
    required uint32 latest_update_time = 2;
    optional bytes attach_data = 20;
}

message IMRecentContactSessionRsp{
    //cmd id:        0x0202
    required uint32 user_id = 1;
    repeated IM.BaseDefine.ContactSessionInfo contact_session_list = 2;
    optional bytes attach_data = 20;
}

message IMUserStatNotify{
    //cmd id:        0x0203
    required IM.BaseDefine.UserStat user_stat = 1;
}

message IMUsersInfoReq{
    //cmd id:        0x0204
    required uint32 user_id = 1;
    repeated uint32 user_id_list = 2;
    optional bytes attach_data = 20;
}

message IMUsersInfoRsp{
    //cmd id:        0x0205
    required uint32 user_id = 1;
    repeated IM.BaseDefine.UserInfo user_info_list = 2;
    optional bytes attach_data = 20;
}

message IMRemoveSessionReq{
    //cmd id:        0x0206
    required uint32 user_id = 1;
    required IM.BaseDefine.SessionType session_type = 2;
    required uint32 session_id = 3;
    optional bytes attach_data = 20;
}

message IMRemoveSessionRsp{
    //cmd id:        0x0207
    required uint32 user_id = 1;
    required uint32 result_code = 2;
    required IM.BaseDefine.SessionType session_type = 3;
    required uint32 session_id = 4;
    optional bytes attach_data = 20;
}

message IMAllUserReq{
    //cmd id:        0x0208
    required uint32 user_id = 1;
    required uint32 latest_update_time = 2;
    optional bytes attach_data = 20;
}

message IMAllUserRsp{
    //cmd id:        0x0209
    required uint32 user_id = 1;
    required uint32 latest_update_time = 2;
    repeated IM.BaseDefine.UserInfo user_list = 3;        
    optional bytes attach_data = 20;
}

message IMUsersStatReq{
    //cmd id:        0x020a
    required uint32 user_id = 1;
    repeated uint32 user_id_list = 2;
    optional bytes attach_data = 20;
}

message IMUsersStatRsp{
    //cmd id:        0x020b
    required uint32 user_id = 1;
    repeated IM.BaseDefine.UserStat user_stat_list = 2;
    optional bytes attach_data = 20;
}

message IMChangeAvatarReq{
    //cmd id:        0x020c
    required uint32 user_id = 1;
    required string avatar_url = 2;
    optional bytes attach_data = 20;
}

message IMChangeAvatarRsp{
    //cmd id:        0x020d
    required uint32 user_id = 1;
    required uint32 result_code = 2;
    optional bytes attach_data = 20;
}

//只给移动端通知
message IMPCLoginStatusNotify{
    //cmd id:        0x020e
    required uint32 user_id = 1;
    required IM.BaseDefine.UserStatType login_stat = 2;
}

 message IMRemoveSessionNotify{
     //cmd id:        0x020f
     required uint32 user_id = 1;
    required IM.BaseDefine.SessionType session_type = 2;
    required uint32 session_id = 3;
 }

message IMDepartmentReq{
    //cmd id:        0x0210
    required uint32 user_id = 1;
    required uint32 latest_update_time = 2;
    optional bytes attach_data = 20;
}

message IMDepartmentRsp{
    //cmd id:        0x0211
    required uint32 user_id = 1;
    required uint32 latest_update_time = 2;
    repeated IM.BaseDefine.DepartInfo dept_list = 3;
    optional bytes attach_data = 20;
}

message IMAvatarChangedNotify {

    //cmd id:        0x02012
    required uint32 changed_user_id = 1;      // 谁修改了avatar
    required string avatar_url = 2;           //
}

message IMChangeSignInfoReq{
   //cmd id:        0x0213

    required uint32 user_id = 1;
    required string sign_info = 2;
    optional bytes attach_data = 20;
}

message IMChangeSignInfoRsp{
    //cmd id:        0x0214
    required uint32 user_id = 1;
    required uint32 result_code = 2;
    optional string sign_info = 3;      // 此字段服务端用，客户端直接忽略
    optional bytes attach_data = 20;
}

    // 个性签名修改通知（广播）
message IMSignInfoChangedNotify {
    //cmd id:        0x0215
    required uint32 changed_user_id = 1;     // 谁修改了个性签名
    required string sign_info = 2;
}




//////////////////////////////////////////////////////
enum TransportToolType{
    TRAIN       = 0x01;
    AIRPLANE    = 0x02;
    BUS         = 0x04;
    WALK        = 0x08;
    TAXI        = 0x10;
}

enum PositionType{
    CENTRAL = 0x01;
    SCENIC  = 0x02;
    OTHER   = 0x03;
}

enum QualityType{
    QUALITY_LOW  = 0x01;
    QUALITY_MID  = 0x02;
    QUALITY_HIGH = 0x03;
}

message TravelToolInfo{
    required uint32 transport_tool_type = 1; // TransportToolType
    required string no                  = 2; // 车次编号
    required string place_from_code     = 3; // 出发地编码
    required string place_from          = 4; // 出发地名称
    required string place_to_code       = 5; // 目的地编码
    required string place_to            = 6; // 目的地名称
    required string time_from           = 7; // 开始时间，08:32
    required string time_to             = 8; // 结束时间，08:32
    required string class               = 9; // 座位等级
    required uint32 price               = 10; // 价格
}

message BasicInfo{
    required string date_from           = 1;
    required string date_to             = 2;
    required string place_to_code       = 3; // 返回地编码
    required uint32 person_num          = 4;
    required string place_from_code     = 5; // 出发地编码
    required string place_back_code     = 6; // 返回地编码
}

message TransportConfig{
    required uint32 tool_type       = 1; // TransportToolType，按位与
    required string time_start      = 2; // 起始时间
    required string time_end        = 3; // 结束时间
    required QualityType quality    = 4;
    required uint32 transit         = 5; // 中转次数
}

message TravelDetail{
    required TransportTool transport_tool   = 1;
    required PlayDetail play_detail         = 2;
}

message TransportTool{
    required TravelToolInfo from_info = 1;
    required TravelToolInfo back_info = 2;
}

message PlayDetail{
    required PlayConfig play_config = 1;
    required HotelInfo hotel_info   = 2;
    repeated ScenicInfo scenic_info = 3;
}

message PlayConfig{
    required QualityType quality                    = 1;
    required string time_from                       = 2;
    required string time_to                         = 3;
    required TransportToolType transport_tool_type  = 4;
    required PositionType position                  = 5;
}

message ScenicInfo{
    required string city_code       = 1; // "XMN"
    required string name            = 2; // 景点名
    required uint32 score           = 3; // 评分
    required string tags            = 4; // 景点标签 "文化 休闲"
    required uint32 free            = 5; // 是否免费
    required uint32 must_see        = 6; // 0为必去
    required string url             = 7; // 介绍网址
    required uint32 play_time       = 8; // 大概游玩时长（小时）
    required uint32 price           = 9; // 价格
    required string best_time_from  = 10; // 开始时间，08:32
    required string best_time_to    = 11; // 结束时间，08:32
}

message HotelInfo{
    required string city_code       = 1; // "XMN"
    required string name            = 2; // 景点名
    required uint32 score           = 3; // 评分
    required string tags            = 4; // 
    required uint32 must_see        = 5; // 0为必去
    required string url             = 6; // 介绍网址
    required uint32 price           = 7; // 价格
    required uint32 distance        = 8;
}

message CreateMyTravelReq{
    required uint32 db_idx                      = 1;
    required BasicInfo basic_info               = 2;
    required TravelDetail travel_detail         = 3;
    required TransportConfig transport_config   = 4;
    required TravelDetail tranvel_detail        = 5;
    optional bytes attach_data                  = 20;
}

message CreateMyTravelRsp{
    required uint32 user_id     = 1;
    required uint32 result_code = 2;
    required uint32 db_idx      = 3;
    optional bytes attach_data  = 20;
}

message GetTransportToolReq{
    //cmd id:        0x0251
    required uint32 user_id = 1;
    required BasicInfo basic_info = 2;
    required TransportConfig transport_config = 3;
    optional bytes attach_data = 20;
}

message GetTransportToolRsp{
    //cmd id:        0x0252
    required uint32 user_id                     = 1;
    required uint32 result_code                 = 2;
    repeated TravelToolInfo travel_tool_info    = 3;
    optional bytes attach_data                  = 20;
}

message GetScenicHotelReq{
    //cmd id:        0x0261
    required uint32 user_id         = 1;
    required string city_code       = 2; // "XMN"
    optional bytes attach_data      = 20;
}

message GetScenicSpotRsp{
    //cmd id:        0x0262
    required uint32 user_id         = 1;
    required uint32 result_code     = 2;
    repeated ScenicInfo scenic_info = 3;
    repeated HotelInfo hotel_info   = 4;
    optional bytes attach_data      = 20;
}

//////////////////////////////////////////////////////